--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Bem-vindo ao Meu Site!</h1>
-    <p>Este é um exemplo de site hospedado no GitHub.</p>
+    <p>Em breve novas atualizações.</p>
     <script src="script.js"></script>
 </body>
 </html>
